kubernetes-manifests/drone/drone-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  namespace: drone
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/component: runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone
      app.kubernetes.io/component: runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone
        app.kubernetes.io/component: runner
    spec:
      serviceAccountName: drone-runner
      containers:
      - name: drone-runner
        image: drone/drone-runner-kube:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1Gi
