kubernetes-manifests/drone/drone-server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: drone
  name: drone-server
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: drone-server
          image: "rascal/drone-server:v1.6.5"
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 128Mi
          volumeMounts:
          - name: drone-data
            mountPath: /data
      volumes:
      - name: drone-data
        persistentVolumeClaim:
          claimName: drone-data-pvc
      dnsConfig:
        options:
        - name: ndots
          value: "1"
