kubernetes-manifests/drone/drone-runner-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/component: runner
  name: drone-runner
  namespace: drone
spec:
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/name: drone
    app.kubernetes.io/component: runner
