kubernetes-manifests/drone/drone-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/component: server
  name: drone-server
  namespace: drone
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: drone
    app.kubernetes.io/component: server
