kubernetes-manifests/drone/drone-server-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: drone-server-ingress
  namespace: drone
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`drone.rascal.local`)
    kind: Rule
    services:
    - name: drone-server
      port: 80
      scheme: http
